--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/jessm91/food-festival#readme",
   "devDependencies": {
     "file-loader": "^6.2.0",
+    "sw-precache-webpack-plugin": "^1.0.0",
     "webpack": "^5.23.0",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
